--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.2.2
   jwt_decoder: ^2.0.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
